# Solana_wallet_analyser

./: .gitignore  .gitkeep  Cargo.toml  git_commit_push.bat  init_wallet_analyzer_repo.bat  readme.md  reset_to_last_commit.bat
backend/: .dockerignore  Cargo.toml  Dockerfile  call_pnl.bat
backend/cache/: swaps_named_KzNxNJvcieTvAF4bnfsuH1YEAXLHcB1cs468JA4K4QE.json  swaps_priced_kznxnjvcietvaf4bnfsuh1yeaxlhcb1cs468ja4k4qe.json  token_names.json  trades_KzNxNJvcieTvAF4bnfsuH1YEAXLHcB1cs468JA4K4QE.json  transactions_KzNxNJvcieTvAF4bnfsuH1YEAXLHcB1cs468JA4K4QE.json
backend/config/: config.toml
backend/data/: jupiter-solana-token-list.json
backend/src/: main.rs
backend/src/modules/: pnl.rs  prices.rs  swaps.rs  transactions.rs  types.rs  utils.rs
cache/: swaps_KzNxNJvcieTvAF4bnfsuH1YEAXLHcB1cs468JA4K4QE.json  swaps_priced_kznxnjvcietvaf4bnfsuh1yeaxlhcb1cs468ja4k4qe.json  trades_KzNxNJvcieTvAF4bnfsuH1YEAXLHcB1cs468JA4K4QE.json
config/: config.toml
frontend/: package-lock.json  package.json
frontend/src/: App.vue
output/: swaps_enriched_with_sol&usd_price.json  swaps_enriched_with_sol_price.json  swaps_filtered.json  swaps_with_sol_prices_binance.json  transactions.json
src/: main.rs  prices.rs
src/_Archive/: 2025-06-13_main swaps filtered flags.rs  2025-06-14_main filter swaps and get names.rs  2025-06-14_main get all names and update swaps.rs  2025-06-14_main get all names via lists&api and update swaps.rs  2025-06-14_main get names via api.rs  2025-07-11_prices.rs  2025-07-13_prices_binance_test.rs  2025-07-13_prices_coingecko_groups.rs  (+6 more)
(+7 files in other folders)
