[package]
name = "wallet_analyzer"
default-run = "wallet_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
config = "0.13"
toml = "0.9.2"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
http = "0.2"
dotenvy = "0.15"

